--- a/views/helloworld.jade
+++ b/views/helloworld.jade
@@ -6,15 +6,18 @@ block content
       br
       input(id="textLead", type='text', name='Lead')
       br
+      br
       | Bass Ticker:
       br
       input(id="textBass", type='text', name='Bass')
       br
+      br
       | Drums Ticker:
       br
       input(id="textDrums", type='text', name='Drums')
-
-    button(onclick='myFunction()') Click me
+      br
+      br
+    button(onclick='myFunction()') Generate Music
     script(src='/javascripts/jquery-min.js')
     script().
       function myFunction() {
