--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,10 +105,10 @@ a img {
  * background color as variables
  */
 body {
-  font-family: 'Ubuntu';
+  font-family: 'Quicksand';
   background-color: #3498db;
-  color: #444;
-  font-size: 25px;
+  color: #fff;
+  font-size: 20px;
   text-align: center;
 }
 header {
@@ -132,9 +132,16 @@ header {
   text-align: center;
 }
 .main-content {
+  
   width: 800px;
   margin: 50px auto;
-  text-alignment: center;
+  text-alignment: left;
+}
+.main-content2{
+  width: 800px;
+  margin: 50px auto;
+  text-alignment: right;
+
 }
 p {
   font-size: 20px;
@@ -174,6 +181,44 @@ p {
   padding: 0px 10px;
   margin-bottom: 10px;
 }
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+        }
+
+.button-success {
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
+.button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
+}
+
+.button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+
+.button-secondary {
+    background: rgb(75, 75, 75); /* this is a light blue */
+    width: 300px;
+    margin: 50px auto;
+    background-color:#333333;
+    font-size: 25px;
+
+}
+
+</style>
+
+<button class="button-success pure-button">Success Button</button>
+<button class="button-error pure-button">Error Button</button>
+<button class="button-warning pure-button">Warning Button</button>
+<button class="button-secondary pure-button">Secondary Button</button>
+
 p {
   line-height: 1.8;
 }
@@ -184,3 +229,48 @@ footer {
   padding-top: 5px;
   font-size: 13px;
 }
+
+/* random shit*/
+input, textarea { 
+    padding: 9px; 
+    border: solid 1px #E5E5E5; 
+    outline: 0; 
+    font: normal 13px/100% Verdana, Tahoma, sans-serif; 
+    width: 200px; 
+    background: #FFFFFF; 
+    box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+
+    input:hover, textarea:hover, 
+    input:focus, textarea:focus { 
+    -webkit-box-shadow: rgba(0, 0, 0, 0.55) 0px 0px 8px; 
+    }
+    } 
+   
+textarea { 
+    width: 400px; 
+    max-width: 400px; 
+    height: 150px; 
+    line-height: 150%; 
+    } 
+   
+input:hover, textarea:hover, 
+input:focus, textarea:focus { 
+    border-color: #C9C9C9; 
+    } 
+   
+.form label { 
+    margin-left: 10px; 
+    color: #999999; 
+    } 
+   
+.button-secondary input { 
+
+    width: auto; 
+    padding: 9px 15px; 
+    background: #617798; 
+    border: 0; 
+    font-size: 14px; 
+    color: #FFFFFF; 
+    }
