--- a/views/helloworld.jade
+++ b/views/helloworld.jade
@@ -32,6 +32,12 @@ block content
       alert(wordLead +" "+ wordBass +" "+wordDrums);
       }
 
+    footer
+      p
+        |Make Music From Your Favorite Stocks
+
+
 block results
     p
     | Lead Ticker is : #{wordLead}
+
