--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
    header
-     h1 Do you have any Change?
+     h1 Spare Change
    p
     block content
