changed the button to fancy button :)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title= title
+    title Spare Change - Invest in some beats
+
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
    header
