--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -255,3 +255,266 @@ input:focus, textarea:focus {
 /*what*/
 
 
+
+
+button {
+  position: relative;
+  //display:block;
+  height: 45px;
+  width: 300px;
+  margin: 10px 7px;
+  padding: 5px 5px;
+  font-weight: 700;
+  font-size: 25px;
+  font-family: 'Quicksand'
+  letter-spacing: 2px;
+  color: #383736;
+  border: 2px #383736 solid;
+  border-radius: 4px;
+  text-transform: uppercase;
+  outline: 0;
+  overflow:hidden;
+  background: none;
+  z-index: 1;
+  cursor: pointer;
+  transition:         0.1s ease-in;
+  -o-transition:      0.1s ease-in;
+  -ms-transition:     0.1s ease-in;
+  -moz-transition:    0.1s ease-in;
+  -webkit-transition: 0.1s ease-in;
+}
+
+.fill:hover {
+  color: white;
+}
+
+.fill:before {
+  content: "";
+  position: absolute;
+  background: #383736;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: -1;
+  -webkit-transition: top 0.09s ease-in;
+}
+
+.fill:hover:before {
+  top: 0;
+}
+
+.fade:before{
+  content:"→";
+  position:absolute;
+  color:#383736;
+  left: 88%;
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-in;
+}
+
+.fade:hover:before{
+  left:91%;
+  opacity:1;
+}
+
+.fade:hover {
+  border: 0px #fff solid;
+  -webkit-transform: scale(1.04,1.04);
+  -webkit-transition: border 0.3s ease-out;
+  -webkit-transition: transform 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+}
+
+.arrow{
+  text-align:left;
+  padding-left:17px;
+}
+
+.arrow:before{
+  content:"→";
+  position:absolute;
+  color:#383736;
+  left: 83%;
+  opacity: 0;
+  -webkit-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+}
+
+.arrow:hover:before{
+  left:84%;
+  opacity:1;
+}
+
+.arrow:hover {
+  width:170px;
+}
+
+
+.slide:after{
+  content:"View Story";
+  position:absolute;
+  width:100%;
+  height:100%;
+  left:0;
+  text-align:center;
+  -webkit-transition: all 400ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+}
+
+.slide:before {
+  content:"Read it →";
+  height:100%;
+  width:100%;
+  position:absolute;
+  color:#383736;
+  left:-100%;
+  opacity: 0;
+  -webkit-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+}
+
+.slide:hover{
+  background:#383736;
+}
+
+.slide:hover:before{
+  left:0;
+  opacity:1;
+  color:#fff;
+}
+.slide:hover:after{
+  left:100%;
+  opacity:0;
+}
+
+.slide.left:hover{
+  background:none;
+}
+
+.slide.left:before {
+  left:100%;
+  color:#383736;
+  -webkit-transition: all 425ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+}
+
+.slide.left:hover:before{
+  left:0;
+}
+
+.svg{
+  -webkit-transition: all 150ms cubic-bezier(0.445, 0.050, 0.550, 0.950); 
+}
+
+.svg:before{
+  position:absolute;  
+  content:"";
+  background: url(http://f.cl.ly/items/3H3A0D1N281a2T280F3o/heist.svg) no-repeat center center;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  z-index:-1;
+  opacity:0;
+  -webkit-transition: all 250ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.svg:after {
+  content: "";
+  position: absolute;
+  background: #d19b26;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: -2;
+  -webkit-transition: all 250ms cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+}
+.svg:hover{
+  color:white;
+  border: 0px #d19b26 solid;
+}
+.svg:hover:before {
+  opacity: .8;
+}
+.svg:hover:after {
+  top: 0;
+}
+
+/*potato*/
+
+@import url( http://fonts.googleapis.com/css?family=Lato:400,700 )
+
+html, body
+  
+  font-family: 'Lato', sans-serif
+  background: #13242f
+  overflow: hidden
+  
+#container
+  
+  &:before
+    
+    @include background-image( radial-gradient( center, ellipse cover, rgba(0,0,0,0) 20%, rgba(0,0,0,1) 95% ) )
+    position: absolute
+    content: ''
+    z-index: 0
+    opacity: 0.9
+    height: 100%
+    width: 100%
+    left: 0
+    top: 0
+  
+  &:after
+    
+    background: url( 'http://s.cdpn.io/1715/noise-1.png' )
+    position: absolute
+    content: ''
+    z-index: 1
+    opacity: 0.8
+    height: 100%
+    width: 100%
+    left: 0
+    top: 0
+    
+audio
+  
+  position: absolute
+  z-index: 2
+  right: 0
+  top: 0
+  
+.message
+  
+  $height: 60px
+  $width: 360px
+  
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2)
+  text-transform: uppercase
+  border-radius: 3px
+  text-align: center
+  line-height: 1.2
+  background: rgba(0,0,0,0.8)
+  position: absolute
+  margin-left: $width * -0.5
+  margin-top: $height * -0.5
+  font-size: 13px
+  padding: 20px
+  display: none
+  z-index: 3
+  height: $height
+  width: $width
+  color: #fff
+  left: 50%
+  top: 50%
+  
+  h1, h2
+    
+    font-weight: 300
+    margin: 10px 0
+    
+    a
+      
+      text-decoration: none
+      font-weight: 700
+      color: #1B676B
+      
+#intro
+  
+  display: block
