--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Spare Change - Invest in some beats
+    title Spare Change - Invest in some new beats
 
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
