--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,18 +130,19 @@ header {
 .container {
   width: 1000px;
   margin: 50px auto;
+  margin-top:-55px;
   overflow: hidden;
   text-align: center;
 }
 .main-content {
-  
+  float: left;
   width: 800px;
   margin: 50px auto;
   text-alignment: left;
 }
 .main-content2{
   width: 800px;
-  margin: 50px auto;
+  margin:50px auto;
   text-alignment: right;
 
 }
@@ -206,13 +207,15 @@ footer {
 
 }
 
+
 /* random shit*/
 input, textarea { 
     padding: 9px; 
     border: solid 1px #E5E5E5; 
     outline: 0; 
     font: normal 13px/100% Verdana, Tahoma, sans-serif; 
-    width: 200px; 
+    width: 150px; 
+    float: right;
     background: #FFFFFF; 
     box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
     -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
